--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -1,22 +1,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  labels:
-    - app: project_name
-  name: base-ingress
-  namespace: luqman
-  annotations:
+ labels:
+  app: base-app
+ name: base-ingress
+    #  namespace: ingress-nginx
+ annotations:
 spec:
-  ingressClassName: nginx-example
-  rules:
-  - host: test.domain.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: test
-            port:
-              number: 80
-
+  #  ingressClassName: nginx-example
+ rules:
+ - host: test.domain.com
+   http:
+    paths:
+        # - path: /
+        #pathType: Prefix
+    - backend:
+       service:
+        name: test
+        port:
+         number: 80
+      path: /
+      pathType: ImplementationSpecific
