--- a/app/simple-fe/kustomization.yml
+++ b/app/simple-fe/kustomization.yml
@@ -53,29 +53,29 @@ patches:
     name: app-svc
     version: v1
       #patchesJson6902:
-- patch: |-
-    - op: replace
-      path: /metadata/labels/app
-      value: simple-fe
-    - op: replace
-      path: /metadata/name
-      value: simple-fe
-    #- op: replace
-    # path: /spec/ingressClassName
-    # value: luqman-ingress
-    - op: replace
-      path: /spec/rules/0/host
-      value: luqman.test.com
-    - op: replace
-      path: /spec/rules/0/http/paths/0/backend/service/name
-      value: simple-fe-svc
-    - op: replace
-      path: /spec/rules/0/http/paths/0/backend/service/port/number
-      value: 80
-  target:
-    kind: Ingress
-    name: base-ingress
-    version: v1
+      #- patch: |-
+      #    - op: replace
+      #      path: /metadata/labels/app
+      #      value: simple-fe
+      #    - op: replace
+      #      path: /metadata/name
+      #      value: simple-fe
+      #    #- op: replace
+      #    # path: /spec/ingressClassName
+      #    # value: luqman-ingress
+      #    - op: replace
+      #      path: /spec/rules/0/host
+      #      value: luqman.test.com
+      #    - op: replace
+      #      path: /spec/rules/0/http/paths/0/backend/service/name
+      #      value: simple-fe-svc
+      #    - op: replace
+      #      path: /spec/rules/0/http/paths/0/backend/service/port/number
+      #      value: 80
+      #  target:
+      #    kind: Ingress
+      #    name: base-ingress
+      #    version: v1
 images:
 - name: change
   newName: luqman1513/fetest
