--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -1,23 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
- labels:
-  app: base-app
- name: base-ingress
-    #  namespace: ingress-nginx
- annotations:
+  annotations:
+    kubernetes.io/ingress.class: ingress-nginx
+  labels:
+    app: base-app
+  name: app-ingress
 spec:
-  #  ingressClassName: nginx-example
- rules:
- - host: test.domain.com
-   http:
-    paths:
-        # - path: /
-        #pathType: Prefix
-    - backend:
-       service:
-        name: test
-        port:
-         number: 80
-      path: /
-      pathType: ImplementationSpecific
+  rules:
+  - host: test.domain.com
+    http:
+      paths:
+      - backend:
+          service:
+            name: bjex-svc
+            port:
+              number: 80
+        path: /
+        pathType: ImplementationSpecific
