--- a/base/service.yaml
+++ b/base/service.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: luqman
 spec:
   ports:
-    #  - name: http
-    # port: 80
-    #  protocol: TCP
+  - name: http
+    port: 80
+    protocol: TCP
   - name: https
     protocol: TCP
     port: 443
